<resources>
    <string name="app_name">Catwalk</string>
    <string name="welcome">Welcome back,</string>
    <string name="enteremail">Enter your email to continue</string>
    <string name="emailx">Email Address</string>
    <string name="create_accounr">Create Account</string>
    <string name="next">Next</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password</string>
    <string name="passwordstep">Enter your password</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="retypepassword">Re enter Password</string>
    <string name="dob">Date of birth</string>
    <string name="user_details">User details</string>
    <string name="login_credentialx">Login credentials</string>
    <string name="malex">Male</string>
    <string name="femalex">Female</string>
    <string name="genderx">Gender</string>
    <string name="agress">agree to the <a href="#">Terms and Conditions</a></string>
    <string name="login">Login</string>
    <string name="gsignup">Sign up</string>
    <string name="or">OR</string>
    <string name="conti_google">continue with google</string>
    <string name="exmaple">DD-MM-YYYY</string>
    <string name="default_web_client_id">642554881717-bkn8nsrc8fhfvpmbc1q86skggdbdmo0d.apps.googleusercontent.com</string>
</resources>
