<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp"
            android:gravity="center_vertical">
            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fabSize="mini"
                android:src="@drawable/left"
                app:fabCustomSize="35dp"
                app:maxImageSize="18dp"
                android:tint="#ffffff"
                android:clickable="true"
                android:id="@+id/create_ac_back"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_accounr"
                android:textColor="@color/textcolor"
                android:textSize="20sp"
                app:fontFamily="@font/tregular"
                android:layout_marginLeft="15dp"/>
        </LinearLayout>
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="25dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="20dp">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/user"
                        android:tint="@color/lighttextcolor"
                        android:scaleType="fitCenter"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_details"
                        android:textSize="16sp"
                        android:textColor="@color/lighttextcolor"
                        android:layout_marginLeft="15dp"
                        android:fontFamily="@font/regular"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/lay_create_first_name"
                        android:layout_weight="0.5">
                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/firstname"
                            android:text=""
                            android:fontFamily="@font/tregular"
                            android:id="@+id/create_first_name"
                            android:inputType="text"
                            android:textSize="14sp"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/lay_create_last_name"
                        android:layout_weight="0.5">
                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/lastname"
                            android:text=""
                            android:fontFamily="@font/tregular"
                            android:id="@+id/create_last_name"
                            android:inputType="text"
                            android:textSize="14sp"/>
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>
                <com.santalu.maskedittext.MaskEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dob"
                    android:text=""
                    android:textSize="14sp"
                    android:fontFamily="@font/tregular"
                    app:met_mask="##-##-####"
                    android:inputType="numberDecimal"
                    android:id="@+id/create_dob"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exmaple"
                    android:textSize="12sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genderx"
                    android:layout_marginTop="10dp"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/create_gender">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/malex"
                        android:fontFamily="@font/regular"
                        android:id="@+id/create_gender_male"
                        android:checked="true"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/femalex"
                        android:fontFamily="@font/regular"
                        android:id="@+id/create_gender_female"
                        android:layout_marginLeft="10dp"/>
                </RadioGroup>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="30dp">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/login"
                        android:tint="@color/lighttextcolor"
                        android:scaleType="fitCenter"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_credentialx"
                        android:textSize="16sp"
                        android:textColor="@color/lighttextcolor"
                        android:layout_marginLeft="15dp"
                        android:fontFamily="@font/regular"/>
                </LinearLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lay_create_email">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/emailx"
                        android:text=""
                        android:fontFamily="@font/tregular"
                        android:id="@+id/create_email"
                        android:inputType="textEmailAddress"
                        android:textSize="14sp"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lay_create_cpass">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:text=""
                        android:fontFamily="@font/tregular"
                        android:id="@+id/create_cpass"
                        android:inputType="textPassword"
                        android:textSize="14sp"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lay_create_pass">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/retypepassword"
                        android:text=""
                        android:fontFamily="@font/tregular"
                        android:id="@+id/create_pass"
                        android:inputType="textPassword"
                        android:textSize="14sp"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agress"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:fontFamily="@font/regular"
                    android:layout_marginTop="20dp"
                    android:textSize="15sp"/>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:cardBackgroundColor="@color/colorPrimary"
                    android:layout_marginBottom="20dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:id="@+id/createaccount">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_accounr"
                        android:padding="15dp"
                        android:layout_gravity="center"
                        android:textColor="#ffffff"
                        android:textStyle="bold"
                        android:textSize="16sp"/>
                </android.support.v7.widget.CardView>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>







    </LinearLayout>


</RelativeLayout>