<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/textcolor"
            android:textSize="27sp"
            app:fontFamily="@font/tregular" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enteremail"
            android:textColor="@color/lighttextcolor"
            android:textSize="20sp"
            app:fontFamily="@font/light" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:hintEnabled="false"
            android:id="@+id/lay_inputemail">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_inputemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fontFamily="@font/regular"
                android:hint="@string/emailx"
                android:inputType="textEmailAddress"
                android:textSize="15sp"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            android:src="@drawable/right"
            android:tint="#ffffff"
            app:maxImageSize="18dp"
            android:clickable="true"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:id="@+id/main_next"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:layout_weight="0"
                android:layout_marginLeft="0dp"
                android:textColor="#BEBEBE"
                android:textSize="13sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E0E0E0"
                android:layout_weight="0.5"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="0.5"
            android:padding="15dp"
            android:clickable="true"
            android:id="@+id/google_signin"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/google"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conti_google"
                android:textSize="16sp"
                android:layout_marginLeft="15dp"
                android:textColor="#818181"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/create_accounr"
                android:fontFamily="@font/regular"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_marginBottom="15dp"
                android:padding="20dp"
                android:id="@+id/login_create_ac"
                android:clickable="true"
                android:layout_weight="0.5"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="0.5"
                android:padding="15dp"
                android:clickable="true"
                android:id="@+id/google_signup">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/google"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gsignup"
                    android:textSize="16sp"
                    android:layout_marginLeft="15dp"
                    android:textColor="#818181"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>