<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordstep"
            android:textColor="@color/textcolor"
            android:textSize="27sp"
            app:fontFamily="@font/tregular"/>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintEnabled="false"
            android:id="@+id/login_inputpass_lay">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_inputpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fontFamily="@font/regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="15sp"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            android:src="@drawable/tick"
            android:tint="#ffffff"
            app:maxImageSize="18dp"
            android:clickable="true"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:id="@+id/main_login"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/forgot_password"
            android:fontFamily="@font/regular"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:padding="20dp"
            android:id="@+id/login_forgot"
            android:clickable="true"/>

    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="mini"
        android:src="@drawable/left"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        app:fabCustomSize="35dp"
        app:maxImageSize="18dp"
        android:tint="#ffffff"
        android:clickable="true"
        android:id="@+id/login_password_back"/>

</RelativeLayout>